@@ -3,6 +3,9 @@ Overview of changes in xtickertape-2.0
 * Plugged 3 memory leaks found by valgrind, and removed a zero-length
   malloc which would result in an abort on platforms which return NULL.
 
+* Added a workaround for a Motif bug so that the group menu to reflect
+  the current selection even before the user clicks on it.
+
 Overview of changes in xtickertape-2.0rc1
 
 * Notification format upgraded to conform to version 3.1 of the
